<resources>
    <string name="app_name">calorieteststuff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fit_go_power">Fit-Go Power</string>
    <string name="todo">TODO</string>
    <string name="calories_tracker">Calories Tracker</string>
    <string name="exercise_routine">Exercise Routine</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="someone_email_com">someone@email.com</string>
    <string name="new_to_fit_go_power_register_here">New to Fit-Go Power? Register here</string>
    <string name="already_register_here_login_in">Already Registered? Login Instead</string>
    <string name="full_name">Full Name</string>
    <string name="john_smith">John Smith</string>
    <string name="submit">Submit</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="person_name">person name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>